Improve code readability and scalability

--- a/src/Naive Bayes.ipynb
+++ b/src/Naive Bayes.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 12,
    "id": "37d3ec8b",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 13,
    "id": "943ccc74",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
        "4         0  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 14,
    "id": "1c23aea6",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 15,
    "id": "ed3d0713",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 16,
    "id": "fad3b943",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
        "4  forced reload on uploading pic on replying com...         0"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 17,
    "id": "6592588b",
    "metadata": {},
    "outputs": [
@@ -292,7 +292,7 @@
        "Name: review, dtype: str"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "20946f2e",
    "metadata": {},
    "outputs": [],
@@ -319,34 +319,43 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "986ee01b",
-   "metadata": {},
-   "source": [
-    "#### MultinomialNB "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "c14656e1",
+   "execution_count": null,
+   "id": "3e18d4a7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "========  MultinomialNB  ========\n",
-      "Accuracy: 0.7541899441340782\n",
-      "Precision: 0.7916666666666666\n",
-      "Recall: 0.5277777777777778\n",
-      "F1-score: 0.6333333333333333\n",
+      "====== MODEL COMPARISON ======\n",
+      "           Model  Train_Accuracy  Test_Accuracy  Train_Precision  \\\n",
+      "1  MultinomialNB        0.963483       0.754190         0.977169   \n",
+      "0     GaussianNB        0.988764       0.726257         0.967078   \n",
+      "2    BernoulliNB        0.915730       0.709497         0.983425   \n",
       "\n",
-      "Confusion Matrix:\n",
+      "   Test_Precision  Train_Recall  Test_Recall  Train_F1   Test_F1  \n",
+      "1        0.791667      0.910638     0.527778  0.942731  0.633333  \n",
+      "0        0.767442      1.000000     0.458333  0.983264  0.573913  \n",
+      "2        0.794118      0.757447     0.375000  0.855769  0.509434  \n",
+      "\n",
+      "====== BEST MODEL BASED ON TEST F1 ======\n",
+      "Model              MultinomialNB\n",
+      "Train_Accuracy          0.963483\n",
+      "Test_Accuracy            0.75419\n",
+      "Train_Precision         0.977169\n",
+      "Test_Precision          0.791667\n",
+      "Train_Recall            0.910638\n",
+      "Test_Recall             0.527778\n",
+      "Train_F1                0.942731\n",
+      "Test_F1                 0.633333\n",
+      "Name: 1, dtype: object\n",
+      "\n",
+      "====== FINAL CONFUSION MATRIX ======\n",
       "[[97 10]\n",
       " [34 38]]\n",
       "\n",
-      "Classification Report:\n",
+      "====== FINAL CLASSIFICATION REPORT ======\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.74      0.91      0.82       107\n",
@@ -360,150 +369,68 @@
     }
    ],
    "source": [
-    "mnb  = MultinomialNB()\n",
-    "mnb.fit(X_train, y_train)\n",
+    "models = {\n",
+    "    \"GaussianNB\": GaussianNB(),\n",
+    "    \"MultinomialNB\": MultinomialNB(),\n",
+    "    \"BernoulliNB\": BernoulliNB()\n",
+    "}\n",
     "\n",
-    "y_pred_mnb = mnb.predict(X_test)\n",
+    "def build_and_evaluate(models):\n",
     "\n",
-    "print(\"========  MultinomialNB  ========\")\n",
-    "print(\"Accuracy:\", accuracy_score(y_test, y_pred_mnb))\n",
-    "print(\"Precision:\", precision_score(y_test, y_pred_mnb))\n",
-    "print(\"Recall:\", recall_score(y_test, y_pred_mnb))\n",
-    "print(\"F1-score:\", f1_score(y_test, y_pred_mnb))\n",
+    "    results = []\n",
     "\n",
-    "print(\"\\nConfusion Matrix:\")\n",
-    "print(confusion_matrix(y_test, y_pred_mnb))\n",
+    "    for name, model in models.items():\n",
     "\n",
-    "print(\"\\nClassification Report:\")\n",
-    "print(classification_report(y_test, y_pred_mnb))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1567012f",
-   "metadata": {},
-   "source": [
-    "#### BernoulliNB "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "id": "02980720",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "========  BernoulliNB  ========\n",
-      "Accuracy: 0.7094972067039106\n",
-      "Precision: 0.7941176470588235\n",
-      "Recall: 0.375\n",
-      "F1-score: 0.5094339622641509\n",
-      "\n",
-      "Confusion Matrix:\n",
-      "[[100   7]\n",
-      " [ 45  27]]\n",
-      "\n",
-      "Classification Report:\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.69      0.93      0.79       107\n",
-      "           1       0.79      0.38      0.51        72\n",
-      "\n",
-      "    accuracy                           0.71       179\n",
-      "   macro avg       0.74      0.65      0.65       179\n",
-      "weighted avg       0.73      0.71      0.68       179\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "bnb = BernoulliNB()\n",
-    "bnb.fit(X_train, y_train)\n",
+    "        model.fit(X_train, y_train)\n",
     "\n",
-    "y_pred_bnb = bnb.predict(X_test)\n",
+    "        y_pred_train = model.predict(X_train)\n",
+    "        y_pred_test = model.predict(X_test)\n",
     "\n",
-    "print(\"========  BernoulliNB  ========\")\n",
-    "print(\"Accuracy:\", accuracy_score(y_test, y_pred_bnb))\n",
-    "print(\"Precision:\", precision_score(y_test, y_pred_bnb))\n",
-    "print(\"Recall:\", recall_score(y_test, y_pred_bnb))\n",
-    "print(\"F1-score:\", f1_score(y_test, y_pred_bnb))\n",
+    "        results.append({\n",
+    "            \"Model\": name,\n",
     "\n",
-    "print(\"\\nConfusion Matrix:\")\n",
-    "print(confusion_matrix(y_test, y_pred_bnb))\n",
+    "            \"Train_Accuracy\": accuracy_score(y_train, y_pred_train),\n",
+    "            \"Test_Accuracy\": accuracy_score(y_test, y_pred_test),\n",
     "\n",
-    "print(\"\\nClassification Report:\")\n",
-    "print(classification_report(y_test, y_pred_bnb))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "feeeb290",
-   "metadata": {},
-   "source": [
-    "#### GaussianNB "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "id": "2982480f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "========  GaussianNB  ========\n",
-      "Accuracy: 0.7262569832402235\n",
-      "Precision: 0.7674418604651163\n",
-      "Recall: 0.4583333333333333\n",
-      "F1-score: 0.5739130434782609\n",
-      "\n",
-      "Confusion Matrix:\n",
-      "[[97 10]\n",
-      " [39 33]]\n",
-      "\n",
-      "Classification Report:\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.71      0.91      0.80       107\n",
-      "           1       0.77      0.46      0.57        72\n",
-      "\n",
-      "    accuracy                           0.73       179\n",
-      "   macro avg       0.74      0.68      0.69       179\n",
-      "weighted avg       0.74      0.73      0.71       179\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "gnb = GaussianNB()\n",
-    "gnb.fit(X_train, y_train)\n",
+    "            \"Train_Precision\": precision_score(y_train, y_pred_train),\n",
+    "            \"Test_Precision\": precision_score(y_test, y_pred_test),\n",
     "\n",
-    "y_pred_gnb = gnb.predict(X_test)\n",
+    "            \"Train_Recall\": recall_score(y_train, y_pred_train),\n",
+    "            \"Test_Recall\": recall_score(y_test, y_pred_test),\n",
     "\n",
-    "print(\"========  GaussianNB  ========\")\n",
-    "print(\"Accuracy:\", accuracy_score(y_test, y_pred_gnb))\n",
-    "print(\"Precision:\", precision_score(y_test, y_pred_gnb))\n",
-    "print(\"Recall:\", recall_score(y_test, y_pred_gnb))\n",
-    "print(\"F1-score:\", f1_score(y_test, y_pred_gnb))\n",
+    "            \"Train_F1\": f1_score(y_train, y_pred_train),\n",
+    "            \"Test_F1\": f1_score(y_test, y_pred_test)\n",
+    "        })\n",
     "\n",
-    "print(\"\\nConfusion Matrix:\")\n",
-    "print(confusion_matrix(y_test, y_pred_gnb))\n",
+    "    return pd.DataFrame(results)\n",
     "\n",
-    "print(\"\\nClassification Report:\")\n",
-    "print(classification_report(y_test, y_pred_gnb))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fa96720f",
-   "metadata": {},
-   "source": [
-    "**The best implementation for this case is MultinomialNB**"
+    "# Results comparison\n",
+    "\n",
+    "df_results = build_and_evaluate(models)\n",
+    "df_results = df_results.sort_values(by=\"Test_F1\", ascending=False)\n",
+    "\n",
+    "print(\"====== MODEL COMPARISON ======\")\n",
+    "print(df_results)\n",
+    "\n",
+    "# Best model\n",
+    "\n",
+    "best_model_row = df_results.iloc[0]\n",
+    "best_model_name = best_model_row[\"Model\"]\n",
+    "best_model = models[best_model_name]\n",
+    "\n",
+    "print(\"\\n====== BEST MODEL BASED ON TEST F1 ======\")\n",
+    "print(best_model_row)\n",
+    "\n",
+    "# Final evaluation\n",
+    "\n",
+    "best_model.fit(X_train, y_train)\n",
+    "y_pred_final = best_model.predict(X_test)\n",
+    "\n",
+    "print(\"\\n====== FINAL CONFUSION MATRIX ======\")\n",
+    "print(confusion_matrix(y_test, y_pred_final))\n",
+    "\n",
+    "print(\"\\n====== FINAL CLASSIFICATION REPORT ======\")\n",
+    "print(classification_report(y_test, y_pred_final))"
    ]
   },
   {
@@ -516,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 23,
    "id": "c02cd03f",
    "metadata": {},
    "outputs": [],
@@ -537,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 24,
    "id": "07f3b05b",
    "metadata": {},
    "outputs": [
@@ -574,14 +501,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "id": "12836210",
+   "execution_count": null,
+   "id": "64e1b93b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "========== TRAIN METRICS ==========\n",
       "Accuracy: 0.9902\n",
       "F1-score: 0.9851\n",
@@ -600,6 +528,7 @@
       "    accuracy                           0.99       712\n",
       "   macro avg       0.99      0.99      0.99       712\n",
       "weighted avg       0.99      0.99      0.99       712\n",
+      "\n",
       "\n",
       "========== TEST METRICS ==========\n",
       "Accuracy: 0.7654\n",
@@ -624,41 +553,26 @@
     }
    ],
    "source": [
-    "best_model_random.fit(X_train, y_train)\n",
+    "def evaluate_model(model, X_train, y_train, X_test, y_test):\n",
     "\n",
-    "y_pred_train = best_model_random.predict(X_train)\n",
+    "    model.fit(X_train, y_train)\n",
     "\n",
-    "acc_train = accuracy_score(y_train, y_pred_train)\n",
-    "f1_train = f1_score(y_train, y_pred_train)\n",
-    "prec_train = precision_score(y_train, y_pred_train)\n",
-    "rec_train = recall_score(y_train, y_pred_train)\n",
-    "cm_train = confusion_matrix(y_train, y_pred_train)\n",
+    "    datasets = {\n",
+    "        \"TRAIN\": (X_train, y_train),\n",
+    "        \"TEST\": (X_test, y_test)\n",
+    "    }\n",
     "\n",
-    "print(\"========== TRAIN METRICS ==========\")\n",
-    "print(f\"Accuracy: {acc_train:.4f}\")\n",
-    "print(f\"F1-score: {f1_train:.4f}\")\n",
-    "print(f\"Precision: {prec_train:.4f}\")\n",
-    "print(f\"Recall: {rec_train:.4f}\")\n",
-    "print(\"Confusion Matrix:\\n\", cm_train)\n",
-    "print(\"\\nClassification Report:\\n\", classification_report(y_train, y_pred_train))\n",
+    "    for name, (X, y) in datasets.items():\n",
+    "        y_pred = model.predict(X)\n",
+    "        print(f\"\\n========== {name} METRICS ==========\")\n",
+    "        print(f\"Accuracy: {accuracy_score(y, y_pred):.4f}\")\n",
+    "        print(f\"F1-score: {f1_score(y, y_pred):.4f}\")\n",
+    "        print(f\"Precision: {precision_score(y, y_pred):.4f}\")\n",
+    "        print(f\"Recall: {recall_score(y, y_pred):.4f}\")\n",
+    "        print(\"Confusion Matrix:\\n\", confusion_matrix(y, y_pred))\n",
+    "        print(\"\\nClassification Report:\\n\", classification_report(y, y_pred))\n",
     "\n",
-    "\"\"\"**************************************************************************************\"\"\"\n",
-    "\n",
-    "y_pred_test = best_model_random.predict(X_test)\n",
-    "\n",
-    "acc_test = accuracy_score(y_test, y_pred_test)\n",
-    "f1_test = f1_score(y_test, y_pred_test)\n",
-    "prec_test = precision_score(y_test, y_pred_test)\n",
-    "rec_test = recall_score(y_test, y_pred_test)\n",
-    "cm_test = confusion_matrix(y_test, y_pred_test)\n",
-    "\n",
-    "print(\"========== TEST METRICS ==========\")\n",
-    "print(f\"Accuracy: {acc_test:.4f}\")\n",
-    "print(f\"F1-score: {f1_test:.4f}\")\n",
-    "print(f\"Precision: {prec_test:.4f}\")\n",
-    "print(f\"Recall: {rec_test:.4f}\")\n",
-    "print(\"Confusion Matrix:\\n\", cm_test)\n",
-    "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred_test))"
+    "evaluate_model(best_model_random, X_train, y_train, X_test, y_test)"
    ]
   },
   {
